fixed text wrap issue and a wee bit of spacing in the new blog

--- a/styles/main.css
+++ b/styles/main.css
@@ -40,6 +40,10 @@ article:last-child {
 
 }
 
+code {
+  white-space: normal;
+}
+
 /*RIGHT COLUMN STYLING*/
 
 /*
@@ -108,7 +112,7 @@ article:last-child {
 }
 
 .cover10 {
-    background-image: url("../img/cover10.jpg"); /* t4 javascript basics */
+    background-image: url("../img/cover10.jpg"); /* c4 cultural blog */
 }
 
 .cover-photo.cover3 {
